--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,1 +1,8 @@
-omg
+<h1><%= current_place.name %></h1>
+
+<%= current_place.description %><br />
+<%= current_place.lat %> <br />
+<%= current_place.lng %> <br />
+
+<%= link_to '<< Back', places_path %>
+<%= link_to 'edit', edit_place_path(current_place) %>
