--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,1 +1,10 @@
-edit
+<h1> Update Your Place</h1>
+
+<%= simple_form_for current_place do |f| %>
+  <%= f.input :name %>
+  <%= f.input :description %>
+  <%= f.input :lat %>
+  <%= f.input :lng %>
+  <%= f.submit 'Create!' %>
+<% end %>
+
