--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,23 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+    TOPNAV:
+    <% if current_user.present? %>
+      Hello: <%= current_user.email %> |
+      <%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %>
+    <% else %>
+      <%= link_to 'Sign in', new_user_session_path %> |
+      <%= link_to 'Sign up', new_user_registration_path %>
+    <% end %>
+    <hr />
+
+    <% if notice.present? %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+
+     <% if alert.present? %>
+       <p class="alert"><%= alert %></p>
+     <% end %>
 
 <%= yield %>
 
