When a user creates a place associate the user with it

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,6 +5,9 @@
   <%= place.description %><br />
   <%= place.lat %> <br />
   <%= place.lng %> <br />
+  <% if place.user.present? %>
+    Added by: <%= place.user.email %><br />
+  <% end %>
 
   <hr />
 <% end %>
