link users with places

--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -5,6 +5,6 @@
   <%= f.input :description %>
   <%= f.input :lat %>
   <%= f.input :lng %>
-  <%= f.submit 'Create!' %>
+  <%= f.submit 'Update!' %>
 <% end %>
 
