--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -3,7 +3,8 @@
 <%= simple_form_for @place do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
-  <%= f.input :lat %>
-  <%= f.input :lng %>
+  <%= f.input :latitude %>
+  <%= f.input :longitude %>
+  <%= f.input :address %>
   <%= f.submit 'Create!' %>
 <% end %>
