--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,41 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-    TOPNAV:
-    <% if current_user.present? %>
-      Hello: <%= current_user.email %> |
-      <%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %>
-    <% else %>
-      <%= link_to 'Sign in', new_user_session_path %> |
-      <%= link_to 'Sign up', new_user_registration_path %>
-    <% end %>
-    <hr />
+
+    <nav class="navbar navbar-inverse" role="navigation">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link_to 'Yelp Clone', root_path, :class => 'navbar-brand' %>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>
+              <%= link_to 'New Place', new_place_path %>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+
+                <% if current_user.present? %>
+                  <li><%= link_to current_user.email, '#' %></li>
+                  <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></li>
+                <% else %>
+                  <li><%= link_to 'Sign in', new_user_session_path %></li>
+                  <li><%= link_to 'Sign up', new_user_registration_path %></li>
+                <% end %>
+
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
 
     <% if notice.present? %>
       <p class="notice"><%= notice %></p>
