--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,10 +1,12 @@
-<h1> Enter a new Place</h1>
+<div class="col-xs-offset-1 xs-col-10">
+  <h1> Enter a new Place</h1>
 
-<%= simple_form_for @place do |f| %>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :latitude %>
-  <%= f.input :longitude %>
-  <%= f.input :address %>
-  <%= f.submit 'Create!' %>
-<% end %>
+  <%= simple_form_for @place do |f| %>
+    <%= f.input :name %>
+    <%= f.input :description %>
+    <%= f.input :latitude %>
+    <%= f.input :longitude %>
+    <%= f.input :address %>
+    <%= f.submit 'Create!' %>
+  <% end %>
+</div>
