--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,17 +1,21 @@
-<h1><%= current_place.name %></h1>
+<div class="col-xs-offset-1 xs-col-10">
+  <h1><%= current_place.name %></h1>
 
-<%= current_place.description %><br />
-<%= current_place.address %> <br />
-<%= current_place.latitude %> <br />
-<%= current_place.longitude %> <br />
+  <%= current_place.description %><br />
+  <%= current_place.address %> <br />
+  <%= current_place.latitude %> <br />
+  <%= current_place.longitude %> <br />
+
   <% if current_place.user.present? %>
     Added by: <%= current_place.user.email %><br />
   <% end %>
 
 
 
-<%= link_to '<< Back', places_path %>
-<% if current_user && current_user.id == current_place.try(:user_id) %>
-<%= link_to 'edit', edit_place_path(current_place) %>
-<%= link_to 'destroy', place_path(current_place), :method => :delete %>
-<% end %>
+  <%= link_to '<< Back', places_path %>
+
+  <% if current_user && current_user.id == current_place.try(:user_id) %>
+    <%= link_to 'edit', edit_place_path(current_place) %>
+    <%= link_to 'destroy', place_path(current_place), :method => :delete %>
+  <% end %>
+</div>
