--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav navbar-right">
 
                 <% if current_user.present? %>
-                  <li><%= link_to current_user.email, '#' %></li>
+                  <li><%= link_to current_user.email, user_path(current_user) %></li>
                   <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></li>
                 <% else %>
                   <li><%= link_to 'Sign in', new_user_session_path %></li>
