--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,12 @@
                   <li><%= link_to 'Sign up', new_user_registration_path %></li>
                 <% end %>
 
+                <% if current_user && current_user.admin %>
+                <li>
+                  <%= link_to 'Admin Dashboard', admin_dashboard_path %>
+                </li>
+                <% end %>
+
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
