--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -11,11 +11,26 @@
   <% end %>
 
 
+  <h2>Add a comment</h2>
+  <%= simple_form_for @comment, :url => place_comments_path(current_place) do |f| %>
+    <%= f.input :message %>
+    <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
+
+    <%= f.submit 'Add your comment' %>
+  <% end %>
 
   <%= link_to '<< Back', places_path %>
 
   <% if current_user && current_user.id == current_place.try(:user_id) %>
     <%= link_to 'edit', edit_place_path(current_place) %>
     <%= link_to 'destroy', place_path(current_place), :method => :delete %>
+  <% end %>
+
+
+  <h1>Comments</h1>
+  <% current_place.comments.each do |comment| %>
+    <blockquote><%= comment.message %></blockquote>
+    <small><%= Comment::RATINGS.invert[comment.rating] %></small>
+    <em><%= comment.user.try(:email) %></em>
   <% end %>
 </div>
