--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -21,7 +21,7 @@
 
   <%= link_to '<< Back', places_path %>
 
-  <% if current_user && current_user.id == current_place.try(:user_id) %>
+  <% if current_user && current_user.can_edit?(current_place) %>
     <%= link_to 'edit', edit_place_path(current_place) %>
     <%= link_to 'destroy', place_path(current_place), :method => :delete %>
   <% end %>
@@ -32,5 +32,10 @@
     <blockquote><%= comment.message %></blockquote>
     <small><%= Comment::RATINGS.invert[comment.rating] %></small>
     <em><%= comment.user.try(:email) %></em>
+    <% if comment.controlled_by?(current_user) && comment.persisted? %>
+      <br />
+      <%= link_to 'Destroy', comment_path(comment), :method => :delete, :class => 'btn btn-large btn-primary' %>
+    <% end %>
+    <hr />
   <% end %>
 </div>
