--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,1 +1,20 @@
 @import "bootstrap";
+
+// http://www.fontsquirrel.com/
+// http://css-tricks.com/snippets/css/font-stacks/
+body {
+  background: url('/assets/shattered.png');
+font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+
+}
+
+.navbar-inverse {
+  background: url('/assets/cartographer.png');
+  border-radius: 0;
+}
+
+.navbar-inverse a.navbar-brand {
+  font-family: 'pacificoregular';
+  color: white;
+  font-size:30px;
+}
