Tweaks to the header

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -18,3 +18,7 @@ font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, 
   color: white;
   font-size:30px;
 }
+
+.navbar-nav {
+  margin-left:30px;
+}
