--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,14 +24,18 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
+
             <li>
-              <%= link_to 'New Place', new_place_path %>
+              <%= link_to new_place_path do %>
+                <i class="glyphicon glyphicon-plus-sign"></i>
+                New Place
+              <% end %>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
 
                 <% if current_user.present? %>
-                  <li><%= link_to current_user.email, user_path(current_user) %></li>
+                  <li><%= link_to 'My User Dashboard', user_path(current_user) %></li>
                   <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></li>
                 <% else %>
                   <li><%= link_to 'Sign in', new_user_session_path %></li>
