--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -15,10 +15,34 @@ font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, 
 
 .navbar-inverse a.navbar-brand {
   font-family: 'pacificoregular';
-  color: white;
+  color: #428bca;
   font-size:30px;
 }
 
 .navbar-nav {
   margin-left:30px;
+}
+
+.booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: white;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  margin-bottom:20px;
+  padding:20px;
+}
+
+.booyah-box p {
+  font-size:20px;
+}
+
+.booyah-box blockquote {
+  font-size:16px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin:0;
+  padding:0;
 }
