--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,12 +1,14 @@
-<div class="col-xs-offset-1 xs-col-10">
+<div class="col-xs-offset-1 col-xs-10 booyah-box">
   <h1> Enter a new Place</h1>
+  <br />
 
   <%= simple_form_for @place do |f| %>
     <%= f.input :name %>
-    <%= f.input :description %>
-    <%= f.input :latitude %>
-    <%= f.input :longitude %>
+    <br />
     <%= f.input :address %>
-    <%= f.submit 'Create!' %>
+    <br />
+    <%= f.input :description %>
+    <br />
+    <%= f.submit 'Create', :class => 'btn btn-primary btn-lg pull-right' %>
   <% end %>
 </div>
