--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,14 +1,113 @@
-<div class="col-xs-offset-1 xs-col-10">
+<div class="col-xs-offset-1 col-xs-10 booyah-box">
   <h1><%= current_place.name %></h1>
+  <i><%= current_place.address %></i><br /><br />
 
-  <%= current_place.description %><br />
-  <%= current_place.address %> <br />
+  <p>
+    <%= current_place.description %>
+  </p>
+
+
+
+<div id="map-canvas"></div>
+
+
+
+  <% if current_place.user.present? %>
+  <div class="pull-left">
+    <small>
+      Added by: <%= current_place.user.email %>
+    </small>
+  </div>
+  <% end %>
+
+<% if current_user && current_user.can_edit?(current_place) %>
+<div class="pull-right">
+  <%= link_to 'edit', edit_place_path(current_place), :class => 'btn btn-primary' %>
+  <%= link_to 'destroy', place_path(current_place), :method => :delete, :class => 'btn btn-danger' %>
+</div>
+<% end %>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="clr"></div>
+<br />
+
+
+<div class="col-xs-10 col-xs-offset-1">
+<h1 class="pull-left">Comments</h1>
+
+<!-- Button trigger modal -->
+<button class="btn btn-primary pull-right" data-toggle="modal" data-target="#commentModal">
+  Add a comment
+</button>
+<div class="clr"></div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<%= simple_form_for @comment, :url => place_comments_path(current_place) do |f| %>
+
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+      </div>
+      <div class="modal-body">
+        <%= f.input :message %><br />
+        <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <%= f.submit 'Add your comment', :class => 'btn btn-primary' %>
+
+      </div>
+    </div>
+  </div>
+<% end %>
+
+</div>
+
+<br /><br />
+
+<% current_place.comments.each do |comment| %>
+<div class="col-sm-6 col-xs-12">
+  <blockquote>
+  <b><%= Comment::RATINGS.invert[comment.rating] %></b> -
+    <%= comment.message %>
+  <small><%= comment.user.try(:email) %></small>
+  <% if comment.controlled_by?(current_user) && comment.persisted? %>
+    <%= link_to 'Destroy', comment_path(comment), :method => :delete, :class => 'btn btn-xs btn-primary pull-right' %>
+    <div class="clr"></div>
+  <% end %>
+
+</blockquote>
+</div>
+<% end %>
+
+
+
+
+
+
+
 
 
   <style>
     #map-canvas {
       height: 200px;
-      width: 900px;
       margin: 20px auto;
       padding: 0px;
 
@@ -47,43 +146,3 @@ var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions)
 
 
 </script>
-
-
-
-<div id="map-canvas"></div>
-
-
-
-  <% if current_place.user.present? %>
-    Added by: <%= current_place.user.email %><br />
-  <% end %>
-
-
-  <h2>Add a comment</h2>
-  <%= simple_form_for @comment, :url => place_comments_path(current_place) do |f| %>
-    <%= f.input :message %>
-    <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
-
-    <%= f.submit 'Add your comment' %>
-  <% end %>
-
-  <%= link_to '<< Back', places_path %>
-
-  <% if current_user && current_user.can_edit?(current_place) %>
-    <%= link_to 'edit', edit_place_path(current_place) %>
-    <%= link_to 'destroy', place_path(current_place), :method => :delete %>
-  <% end %>
-
-
-  <h1>Comments</h1>
-  <% current_place.comments.each do |comment| %>
-    <blockquote><%= comment.message %></blockquote>
-    <small><%= Comment::RATINGS.invert[comment.rating] %></small>
-    <em><%= comment.user.try(:email) %></em>
-    <% if comment.controlled_by?(current_user) && comment.persisted? %>
-      <br />
-      <%= link_to 'Destroy', comment_path(comment), :method => :delete, :class => 'btn btn-large btn-primary' %>
-    <% end %>
-    <hr />
-  <% end %>
-</div>
