--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
   clear:both;
 }
 
-
+// http://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
