Spruce up the user pages

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,7 @@
-<h2>Forgot your password?</h2>
+<div class="col-xs-offset-1 col-xs-10 booyah-box">
 
+<h2>Forgot your password?</h2>
+<br />
 <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= f.error_notification %>
 
@@ -7,9 +9,12 @@
     <%= f.input :email, :required => true, :autofocus => true %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+  <br /><br />
+  <div class="form-actions pull-left">
+    <%= f.button :submit, "Send me reset password instructions", :class => 'btn btn-primary' %>
   </div>
 <% end %>
-
+<div class="pull-right other-links">
 <%= render "devise/shared/links" %>
+</div>
+</div>
