--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,25 @@
+<div class="col-xs-offset-1 col-xs-10 booyah-box">
+
+
 <h2>Sign up</h2>
 
+<br />
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :email, :required => true, :autofocus => true %>
+<br />
     <%= f.input :password, :required => true %>
+<br />
     <%= f.input :password_confirmation, :required => true %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <br />
+  <div class="form-actions pull-left">
+    <%= f.button :submit, "Sign up", :class => 'btn btn-primary' %>
   </div>
 <% end %>
-
+<div class="pull-right other-links">
 <%= render "devise/shared/links" %>
+</div>
+</div>
