--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,25 @@
-<h1>User: <%= selected_user.email %></h1>
+<div class="booyah-box">
+  <div class="col-sm-3 col-sm-offset-1">
+    <%= image_tag 'user.png' %>
+  </div>
+  <div class="col-sm-6 col-sm-offset-2">
+<h1><%= selected_user.email %></h1>
+<!-- http://www.dzone.com/snippets/date-time-format-ruby -->
+<br />
+<h3>Member Since <%= selected_user.created_at.strftime('%m-%d-%Y')%></h3>
+<h4><%= selected_user.comments.count %> total comments</h4>
+<h4><%= selected_user.comments.five_star.count %> five star ratings</h4>
+</div>
+<div class="clr"></div>
+</div>
 
-<br /><br /><br /><br />
+<br /><br />
+  <h1 class="text-center">My Comments</h1>
+<br /><br />
 
 <% selected_user.comments.each do |comment| %>
 <div class="col-sm-6 col-xs-12">
-  <h2 class="text-center"><%= comment.place.name %></h2>
+  <h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
   <blockquote>
   <b><%= Comment::RATINGS.invert[comment.rating] %></b> -
     <%= comment.message %>
@@ -19,9 +34,10 @@
 
 
 
-<% if selected_user.places.present? %>
-  <h2 class="col-xs-10 col-xs-offset-1">My Places</h2>
+<div class="clr"></div>
 <br /><br />
+<% if selected_user.places.present? %>
+  <h1 class="text-center">My Places</h1>
 <br /><br />
 
 
