Polish the app.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,11 +49,13 @@
     </nav>
 
     <% if notice.present? %>
-      <p class="notice"><%= notice %></p>
+      <br />
+      <p class="alert alert-info"><%= notice %></p>
     <% end %>
 
      <% if alert.present? %>
-       <p class="alert"><%= alert %></p>
+       <br />
+       <p class="alert alert-danger"><%= alert %></p>
      <% end %>
 
 <%= yield %>
