--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -3,7 +3,8 @@
 // http://www.fontsquirrel.com/
 // http://css-tricks.com/snippets/css/font-stacks/
 body {
-  background: url('/assets/shattered.png');
+//  background-color:#EEEEEE;
+  background: url('/assets/crossword.png');
 font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 
 }
@@ -11,6 +12,7 @@ font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, 
 .navbar-inverse {
   background: url('/assets/cartographer.png');
   border-radius: 0;
+  margin:0;
 }
 
 .navbar-inverse a.navbar-brand {
@@ -32,6 +34,7 @@ font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, 
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   margin-bottom:20px;
   padding:20px;
+  margin-top:10px;
 }
 
 .booyah-box p {
@@ -74,4 +77,24 @@ blockquote p {
 .other-links {
   font-size:12px;
   font-style:italic;
+}
+
+
+.carousel-caption{
+    background: rgba(0, 0, 0, 0.5);
+width: 100%;
+padding-top: 20px;
+position: absolute;
+left: 0;
+
+}
+.carousel-caption h3 {
+  font-weight: 100;
+  font-family: Helvetica Neue;
+  letter-spacing: -0.3px;
+  font-size: 60px;
+}
+.carousel-inner > .item > img.carousel-image,
+.carousel-inner > .item > a > img.carousel-image {
+  width:100%; height:400px;
 }
