--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,10 +1,70 @@
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <%= image_tag 'pillboxes.jpg', :class => 'carousel-image' %>
+
+      <div class="carousel-caption">
+        <div class="carousel-caption">
+          <h3>The Pillboxes @ Lanikai</h3>
+        </div>
+
+</div>
+
+
+    </div>
+
+
+    <div class="item">
+      <%= image_tag 'shave-ice.jpg', :class => 'carousel-image' %>
+
+      <div class="carousel-caption">
+        <h3>Shave Ice @ Island Snow</h3>
+      </div>
+    </div>
+
+
+        <div class="item">
+<%= image_tag 'mokes.jpg', :class => 'carousel-image' %>
+
+  <div class="carousel-caption">
+    <h3>Kayaking to the Mokes</h3>
+  </div>
+        </div>
+
+
+
+
+  </div>
+
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+<br />
+<h1 class="text-center">Best Places in Hawaii</h1>
+<br />
+
 <% @places.each do |place| %>
   <div class="booyah-box col-xs-10 col-xs-offset-1">
     <h2><%= link_to place.name, place_path(place) %></h2>
     <i><%= place.address %></i><br /><br />
 
     <p><%= place.description %></p>
-    
+
 
     <% if place.comments.present? %>
       <br />
