added pizza slider images, made them responsive and edited two of them - the -2 ones -  be all 550px in height

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,33 +10,29 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag 'pillboxes.jpg', :class => 'carousel-image' %>
+      <%= image_tag 'sl3-2.jpg', :class => ' img-responsive carousel-image' %>
 
-      <div class="carousel-caption">
         <div class="carousel-caption">
-          <h3>The Pillboxes @ Lanikai</h3>
+          <h3>Pizza Restaurant in Rome</h3>
         </div>
-
-</div>
-
 
     </div>
 
 
     <div class="item">
-      <%= image_tag 'shave-ice.jpg', :class => 'carousel-image' %>
+      <%= image_tag 'sl1.jpg', :class => 'img-responsive carousel-image' %>
 
       <div class="carousel-caption">
-        <h3>Shave Ice @ Island Snow</h3>
+        <h3>Pizza Night Out in Italy</h3>
       </div>
     </div>
 
 
         <div class="item">
-<%= image_tag 'mokes.jpg', :class => 'carousel-image' %>
+<%= image_tag 'sl4-2.jpg', :class => 'img-responsive carousel-image' %>
 
   <div class="carousel-caption">
-    <h3>Kayaking to the Mokes</h3>
+    <h3>Pizza in Italy</h3>
   </div>
         </div>
 
