--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -81,11 +81,11 @@ blockquote p {
 
 
 .carousel-caption{
-    background: rgba(0, 0, 0, 0.5);
-width: 100%;
-padding-top: 20px;
-position: absolute;
-left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  padding-top: 20px;
+  position: absolute;
+  left: 0;
 
 }
 .carousel-caption h3 {
@@ -96,5 +96,6 @@ left: 0;
 }
 .carousel-inner > .item > img.carousel-image,
 .carousel-inner > .item > a > img.carousel-image {
-  width:100%; height:400px;
+  width:100%; 
+  max-height: 550px;
 }
