copy changes to slider and app name

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -13,7 +13,7 @@
       <%= image_tag 'sl3-2.jpg', :class => ' img-responsive carousel-image' %>
 
         <div class="carousel-caption">
-          <h3>Pizza Restaurant in Rome</h3>
+          <h3>The best Pizza Places in Rome</h3>
         </div>
 
     </div>
@@ -23,18 +23,18 @@
       <%= image_tag 'sl1.jpg', :class => 'img-responsive carousel-image' %>
 
       <div class="carousel-caption">
-        <h3>Pizza Night Out in Italy</h3>
+        <h3>Underground and Hidden Pizza Secrets</h3>
       </div>
     </div>
 
 
-        <div class="item">
-<%= image_tag 'sl4-2.jpg', :class => 'img-responsive carousel-image' %>
+    <div class="item">
+      <%= image_tag 'sl4-2.jpg', :class => 'img-responsive carousel-image' %>
 
-  <div class="carousel-caption">
-    <h3>Pizza in Italy</h3>
-  </div>
+        <div class="carousel-caption">
+          <h3>The Best Pizza - nothing else</h3>
         </div>
+    </div>
 
 
 
@@ -51,7 +51,7 @@
   </a>
 </div>
 <br />
-<h1 class="text-center">Best Places in Hawaii</h1>
+<h1 class="text-center">Underground Pizza Places in Rome</h1>
 <br />
 
 <% @places.each do |place| %>
