adjusting the master css and places index so it matches the lessons a bit better

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,7 +10,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag 'sl3-2.jpg', :class => ' img-responsive carousel-image' %>
+      <%= image_tag 'sl3-2.jpg', :class => ' img-responsive' %>
 
         <div class="carousel-caption">
           <h3>The best Pizza Places in Rome</h3>
@@ -20,7 +20,7 @@
 
 
     <div class="item">
-      <%= image_tag 'sl1.jpg', :class => 'img-responsive carousel-image' %>
+      <%= image_tag 'sl1.jpg', :class => 'img-responsive' %>
 
       <div class="carousel-caption">
         <h3>Underground and Hidden Pizza Secrets</h3>
@@ -29,7 +29,7 @@
 
 
     <div class="item">
-      <%= image_tag 'sl4-2.jpg', :class => 'img-responsive carousel-image' %>
+      <%= image_tag 'sl4-2.jpg', :class => 'img-responsive' %>
 
         <div class="carousel-caption">
           <h3>The Best Pizza - nothing else</h3>
