--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -94,8 +94,7 @@ blockquote p {
   letter-spacing: -0.3px;
   font-size: 60px;
 }
-.carousel-inner > .item > img.carousel-image,
-.carousel-inner > .item > a > img.carousel-image {
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
   width:100%; 
   max-height: 550px;
 }
