fixing the email copy and from address

--- a/app/views/notification_mailer/comment_added.text.erb
+++ b/app/views/notification_mailer/comment_added.text.erb
@@ -1,4 +1,3 @@
-Woah, a new place is on my-awesome-app.com
--------------
+You received a new comment on your Nomster Place - <%= place_url(@place) %>
 
-Pssst go here: <%= place_url(@place) %>
+-----
