--- a/app/views/notification_mailer/comment_added.html.erb
+++ b/app/views/notification_mailer/comment_added.html.erb
@@ -4,9 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Woah, a new place is on my-awesome-app.com</h1>
-    <p>
-      Pssst it's <%= link_to @place.name, place_url(@place) %>.<br/>
-    </p>
+    <h1>You received a new comment on your <a href="http://nomster.herokuapp.com/">Nomster Place - <%= link_to @place.name, place_url(@place) %>.</a></h1>
+
   </body>
 </html>
