--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<iframe src="/hello.html" id="" name="" class="remains_at_top" scrolling="no" style="height: 58px; width:100%;margin:0;margin-bottom:-12px;"></iframe>
 
-    <nav class="navbar navbar-inverse" role="navigation" style="margin:0; ">
+    <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
